--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "knex migrate:rollback && knex migrate:latest && knex seed:run && nodemon ./src/index.js",
+    "start": "knex migrate:rollback --all && knex migrate:latest && knex seed:run && nodemon ./src/index.js",
     "start-dev": "knex migrate:rollback && knex migrate:latest && knex seed:run && nodemon ./src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
