--- a/server/package.json
+++ b/server/package.json
@@ -21,5 +21,8 @@
     "knex": "^3.1.0",
     "morgan": "^1.10.0",
     "pg": "^8.12.0"
+  },
+  "devDependencies": {
+    "@faker-js/faker": "^8.4.1"
   }
 }
